--- a/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
+++ b/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dd9bcd">  <td>18/12/18 01:25:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginExcelTest.setUpBeforeClass()[pri:0, instance:com.training.regression.tests.LoginExcelTest@cc285f4]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>18/12/24 15:35:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CoursedescriptionTest.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.CoursedescriptionTest@ae45eb6]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>18/12/24 15:35:53</td>   <td>12186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CoursedescriptionTest.subscribeTest()[pri:0, instance:com.training.sanity.tests.CoursedescriptionTest@ae45eb6]">subscribeTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
 </table>
