--- a/final-framework-testng/test-output/old/Default suite/classes.html
+++ b/final-framework-testng/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.training.sanity.tests.CoursedescriptionTest</td>
+<td>com.training.sanity.tests.DiscussforumTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
