--- a/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
+++ b/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97c064">  <td>19/01/04 18:57:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ChatTest.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.ChatTest@ae45eb6]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/01/04 18:58:02</td>   <td>9468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChatTest.subscribeTest()[pri:0, instance:com.training.sanity.tests.ChatTest@ae45eb6]">subscribeTest</td> 
-  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/01/16 20:38:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ELTC_073Test.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.ELTC_073Test@59f99ea]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
 </table>
