--- a/final-framework-testng/test-output/emailable-report.html
+++ b/final-framework-testng/test-output/emailable-report.html
@@ -9,9 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12,426</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">100,183</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4" class="invisible"/></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.training.sanity.tests.ELTC_075Test</td><td><a href="#m0">subscribeTest</a></td><td rowspan="4">1547800190819</td><td rowspan="4">34694</td></tr><tr class="passedeven"><td><a href="#m1">subscribeTest</a></td></tr><tr class="passedeven"><td><a href="#m2">subscribeTest</a></td></tr><tr class="passedeven"><td><a href="#m3">subscribeTest</a></td></tr></tbody>
 </table>
-<h2>Default test</h2></body>
+<h2>Default test</h2><h3 id="m0">com.training.sanity.tests.ELTC_075Test#subscribeTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th></tr><tr class="param stripe"><td>BL</td><td>Blended Learning</td><td>Selenium</td><td>BL</td><td>Manzoor</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.training.sanity.tests.ELTC_075Test#subscribeTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th></tr><tr class="param stripe"><td>CL</td><td>ClassRoom</td><td>Testing</td><td>TL</td><td>Manzoor</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.training.sanity.tests.ELTC_075Test#subscribeTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th></tr><tr class="param stripe"><td>WL</td><td>WebILT</td><td>Selenium Course</td><td>WL</td><td>Manzoor</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.training.sanity.tests.ELTC_075Test#subscribeTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th></tr><tr class="param stripe"><td>PJP</td><td>Pre Joining</td><td>JAVA</td><td>JV</td><td>Manzoor</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+</body>
 </html>
