--- a/final-framework-testng/test-output/index.html
+++ b/final-framework-testng/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\IBM_ADMIN\AppData\Local\Temp\testng-eclipse--1378925738\testng-customsuite.xml</span>
+                    <span>C:\Users\IBM_ADMIN\AppData\Local\Temp\testng-eclipse-1676091781\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,36 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">0 methods,   </span>
+                    <span class="method-stats">4 methods,   4 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
+                    </span>
+                    <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.ELTC_075Test" hash-for-method="subscribeTest(BL, Blended Learning, Selenium, BL, Manzoor)">subscribeTest(BL, Blended Learning, Selenium, BL, Manzoor)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.ELTC_075Test" hash-for-method="subscribeTest(CL, ClassRoom, Testing, TL, Manzoor)">subscribeTest(CL, ClassRoom, Testing, TL, Manzoor)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.ELTC_075Test" hash-for-method="subscribeTest(WL, WebILT, Selenium Course, WL, Manzoor)">subscribeTest(WL, WebILT, Selenium Course, WL, Manzoor)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.ELTC_075Test" hash-for-method="subscribeTest(PJP, Pre Joining, JAVA, JV, Manzoor)">subscribeTest(PJP, Pre Joining, JAVA, JV, Manzoor)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -103,10 +132,50 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.training.sanity.tests.ELTC_075Test</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="subscribeTest(BL, Blended Learning, Selenium, BL, Manzoor)">
+                  </a> <!-- subscribeTest(BL, Blended Learning, Selenium, BL, Manzoor) -->
+                  <span class="method-name">subscribeTest</span>
+                  <span class="parameters">(BL, Blended Learning, Selenium, BL, Manzoor)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="subscribeTest(CL, ClassRoom, Testing, TL, Manzoor)">
+                  </a> <!-- subscribeTest(CL, ClassRoom, Testing, TL, Manzoor) -->
+                  <span class="method-name">subscribeTest</span>
+                  <span class="parameters">(CL, ClassRoom, Testing, TL, Manzoor)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="subscribeTest(WL, WebILT, Selenium Course, WL, Manzoor)">
+                  </a> <!-- subscribeTest(WL, WebILT, Selenium Course, WL, Manzoor) -->
+                  <span class="method-name">subscribeTest</span>
+                  <span class="parameters">(WL, WebILT, Selenium Course, WL, Manzoor)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="subscribeTest(PJP, Pre Joining, JAVA, JV, Manzoor)">
+                  </a> <!-- subscribeTest(PJP, Pre Joining, JAVA, JV, Manzoor) -->
+                  <span class="method-name">subscribeTest</span>
+                  <span class="parameters">(PJP, Pre Joining, JAVA, JV, Manzoor)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\IBM_ADMIN\AppData\Local\Temp\testng-eclipse--1378925738\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\IBM_ADMIN\AppData\Local\Temp\testng-eclipse-1676091781\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -115,7 +184,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.training.sanity.tests.ELTC_073Test&quot;/&gt;
+      &lt;class name=&quot;com.training.sanity.tests.ELTC_075Test&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -155,11 +224,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(0);
+data.addRows(4);
+data.setCell(0, 0, 0)
+data.setCell(0, 1, 'subscribeTest')
+data.setCell(0, 2, 'com.training.sanity.tests.ELTC_075Test')
+data.setCell(0, 3, 34694);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'subscribeTest')
+data.setCell(1, 2, 'com.training.sanity.tests.ELTC_075Test')
+data.setCell(1, 3, 19353);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'subscribeTest')
+data.setCell(2, 2, 'com.training.sanity.tests.ELTC_075Test')
+data.setCell(2, 3, 16605);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'subscribeTest')
+data.setCell(3, 2, 'com.training.sanity.tests.ELTC_075Test')
+data.setCell(3, 3, 15950);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -185,11 +271,27 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.training.sanity.tests.ELTC_073Test</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.training.sanity.tests.ELTC_075Test</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUpBeforeClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">subscribeTest(BL, Blended Learning, Selenium, BL, Manzoor)</span>
+                <span class="method-start">13556 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">subscribeTest(WL, WebILT, Selenium Course, WL, Manzoor)</span>
+                <span class="method-start">48255 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">subscribeTest(CL, ClassRoom, Testing, TL, Manzoor)</span>
+                <span class="method-start">67610 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">subscribeTest(PJP, Pre Joining, JAVA, JV, Manzoor)</span>
+                <span class="method-start">83563 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
