--- a/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
+++ b/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97c064">  <td>19/01/16 20:38:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ELTC_073Test.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.ELTC_073Test@59f99ea]">&gt;&gt;setUpBeforeClass</td> 
+<tr bgcolor="97c064">  <td>19/01/18 13:59:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ELTC_075Test.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.ELTC_075Test@59f99ea]">&gt;&gt;setUpBeforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/01/18 13:59:50</td>   <td>13548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ELTC_075Test.subscribeTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.ELTC_075Test@59f99ea]">subscribeTest</td> 
+  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/01/18 14:00:25</td>   <td>48247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ELTC_075Test.subscribeTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.ELTC_075Test@59f99ea]">subscribeTest</td> 
+  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/01/18 14:00:44</td>   <td>67602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ELTC_075Test.subscribeTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.ELTC_075Test@59f99ea]">subscribeTest</td> 
+  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/01/18 14:01:00</td>   <td>83555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ELTC_075Test.subscribeTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.ELTC_075Test@59f99ea]">subscribeTest</td> 
+  <td>main@764577347</td>   <td></td> </tr>
 </table>
